Se agrega icono Ecadem

--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml file generated for genpass on 2023-01-06T23:07:56-05:00
+# fly.toml file generated for frontgenpass on 2023-01-09T03:36:08-05:00
 
 app = "frontgenpass"
 kill_signal = "SIGINT"
@@ -13,7 +13,7 @@ processes = []
 
 [[services]]
   http_checks = []
-  internal_port = 4200
+  internal_port = 80
   processes = ["app"]
   protocol = "tcp"
   script_checks = []
