se soluciona error por estructura respuesta api

--- a/Dockerfile_Desarrollo
+++ b/Dockerfile_Desarrollo
@@ -2,8 +2,11 @@ FROM ubuntu:22.04
 
 
 # Argumentos
-ARG NG_VERSION
-ARG NODE_VERSION
+# ARG NG_VERSION
+# ARG NODE_VERSION
+
+ARG NG_VERSION="15.0.0"
+ARG NODE_VERSION="v18.16.0"
 
 # Variables de entorno para nvm
 ENV NODE_VERSION=${NODE_VERSION}
